@@ -2,6 +2,7 @@
 IF(BUILD_JPIP_SERVER)
   FIND_PACKAGE(CURL REQUIRED)
   FIND_PACKAGE(FCGI REQUIRED)
+  FIND_PACKAGE(PTHREAD REQUIRED)
 ENDIF(BUILD_JPIP_SERVER)
 
 # JPIP library:
