@@ -22,7 +22,7 @@ $(LIBNAME): openjpip.o target_manager.o byte_manager.o box_manager.o boxheader_m
 	msgqueue_manager.o metadata_manager.o placeholder_manager.o ihdrbox_manager.o imgreg_manager.o \
 	cachemodel_manager.o j2kheader_manager.o jp2k_encoder.o  query_parser.o channel_manager.o \
 	session_manager.o jpip_parser.o jp2k_decoder.o imgsock_manager.o jpipstream_manager.o cache_manager.o \
-	dec_clientmsg_handler.o sock_manager.o auxtrans_manager.o
+	dec_clientmsg_handler.o sock_manager.o
 	ar r $@ $^
 endif
 clean:
